fix invisible connector lines when hovering over organization structure

--- a/siteservice/website/assets/css/style.css
+++ b/siteservice/website/assets/css/style.css
@@ -377,7 +377,6 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 .tree ul {
     padding-top: 20px;
     position: relative;
-
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -389,7 +388,6 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
     list-style-type: none;
     position: relative;
     padding: 20px 5px 0 5px;
-
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
     -moz-transition: all 0.5s;
@@ -479,11 +477,13 @@ ul.built { list-style: none; margin: 0 auto; width: 730px; }
 }
 
 /*Connector styles on hover*/
+/*noinspection CssOptimizeSimilarProperties*/
 .tree li a:hover + ng-include ul li::after,
 .tree li a:hover + ng-include ul li::before,
 .tree li a:hover + ng-include ul::before,
 .tree li a:hover + ng-include ul ul::before {
-    border: 2px #94a0b4;
+    border-color: #94a0b4;
+    border-width: 2px;
 }
 
 .tree .active-organization > a {
